--- a/app_onix/onix_client/OnixClientCenter/OnixClientCenter/UI/HumanResource/EmployeeInfo/WinAddEditEmployeeInfo.xaml
+++ b/app_onix/onix_client/OnixClientCenter/OnixClientCenter/UI/HumanResource/EmployeeInfo/WinAddEditEmployeeInfo.xaml
@@ -190,6 +190,7 @@
             </Button>
 
             <Button Name="cmdCancel" IsCancel="True" Content="{Binding Source={x:Static lang:CTextLabel.Instance}, Path=cancel}" MinWidth="80"  Margin="5,0,0,5"/>
+            <Button Name="cmdLeave" Content="ข้อมูลการลา" MinWidth="100"  Margin="5,0,0,5" Click="CmdLeave_Click"/>
         </StackPanel>
         
         <TabControl Margin="5, 0, 5, 5" DockPanel.Dock="Bottom">
